--- a/css/main.css
+++ b/css/main.css
@@ -69,13 +69,29 @@ body {
     .row .row-right p {
       text-align: center;
       padding: 10px;
-      border: 1px solid orangered;
-      color: orangered; }
+      border: 1px solid #fff;
+      color: #fff;
+      -webkit-transition: all 0.5 ease-in-out;
+      -o-transition: all 0.5 ease-in-out;
+      transition: all 0.5 ease-in-out; }
       .row .row-right p a {
         text-decoration: none;
         color: inherit; }
+      .row .row-right p:hover {
+        border-color: orangered;
+        color: orangered; }
+
+h1.end {
+  margin-top: -100px;
+  color: #fff;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: 0.8s ease-in-out;
+  -o-transition: 0.8s ease-in-out;
+  transition: 0.8s ease-in-out; }
 
 #form-box {
+  margin: auto;
   width: 80%;
   position: relative;
   background: #fff;
@@ -92,6 +108,16 @@ body {
   transition: transform 0.1s ease-in-out, -webkit-transform 0.1s ease-in-out;
   margin-bottom: 20px !important;
   margin-top: 50px !important; }
+
+#form-box.close {
+  width: 0;
+  padding: 0;
+  overflow: hidden;
+  -webkit-transition: 0.8s ease-in-out;
+  -o-transition: 0.8s ease-in-out;
+  transition: 0.8s ease-in-out;
+  -webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0);
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0); }
 
 #prevBtn {
   position: absolute;
@@ -127,7 +153,7 @@ body {
   position: relative;
   padding: 30px 20px 20px 20px;
   margin: 10px 60px 10px 10px;
-  opacity: 1;
+  opacity: 0;
   -webkit-transition: opacity 0.3s ease-in-out;
   -o-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out; }
@@ -137,6 +163,7 @@ body {
     border: none;
     font-size: 20px;
     font-weight: bold;
+    font-family: "Kurale", serif;
     outline: 0;
     background: transparent;
     -webkit-box-shadow: none;
@@ -164,11 +191,11 @@ body {
   -webkit-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  width: 100%;
+  width: 0;
   border-bottom: 1px solid #000; }
 
 #progress-bar {
-  width: 20%;
+  width: 0;
   background: #e3e3e3;
   height: 10px;
   position: absolute;
@@ -176,10 +203,14 @@ body {
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out; }
 
+.close #nextBtn,
+.close #prevBtn {
+  color: #fff; }
+
 .error #input-progress {
   border-color: #ff2d26; }
 
-.error #next-btn {
+.error #nextBtn {
   color: #ff2d26; }
 
 .optional-link {
