--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,17 +57,31 @@ body {
 		p {
 			text-align: center;
 			padding: 10px;
-			border: 1px solid orangered;
-			color: orangered;
+			border: 1px solid #fff;
+			color: #fff;
+			transition: all 0.5 ease-in-out;
 			a {
 				text-decoration: none;
 				color: inherit;
+			}
+			&:hover {
+				border-color: orangered;
+				color: orangered;
 			}
 		}
 	}
 }
 
+h1.end {
+	margin-top: -100px;
+	color: #fff;
+	position: relative;
+	opacity: 0;
+	transition: 0.8s ease-in-out;
+}
+
 #form-box {
+	margin: auto;
 	width: 80%;
 	position: relative;
 	background: #fff;
@@ -80,6 +94,14 @@ body {
 	transition: transform 0.1s ease-in-out;
 	margin-bottom: 20px !important;
 	margin-top: 50px !important;
+}
+
+#form-box.close {
+	width: 0;
+	padding: 0;
+	overflow: hidden;
+	transition: 0.8s ease-in-out;
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0);
 }
 
 #prevBtn {
@@ -126,7 +148,7 @@ body {
 	position: relative;
 	padding: 30px 20px 20px 20px;
 	margin: 10px 60px 10px 10px;
-	opacity: 1;
+	opacity: 0;
 	transition: opacity 0.3s ease-in-out;
 
 	input {
@@ -135,6 +157,7 @@ body {
 		border: none;
 		font-size: 20px;
 		font-weight: bold;
+		font-family: $kurale-family;
 		outline: 0;
 		background: transparent;
 		box-shadow: none;
@@ -163,16 +186,23 @@ body {
 
 #input-progress {
 	transition: all 0.5s ease-in-out;
-	width: 100%;
+	width: 0;
 	border-bottom: 1px solid #000;
 }
 
 #progress-bar {
-	width: 20%;
+	width: 0;
 	background: #e3e3e3;
 	height: 10px;
 	position: absolute;
 	transition: all 0.5s ease-in-out;
+}
+
+.close {
+	#nextBtn,
+	#prevBtn {
+		color: #fff;
+	}
 }
 
 .error {
@@ -180,7 +210,7 @@ body {
 		border-color: $error;
 	}
 
-	#next-btn {
+	#nextBtn {
 		color: $error;
 	}
 }
